--- a/1103.html
+++ b/1103.html
@@ -19,9 +19,9 @@
          
          <div class="five">5</div>
          
-         <div id="buttenleft"></div>
+         <div class="buttenleft"></div>
 
-         <div  id="buttenright"></div>
+         <div  class="buttenright"></div>
 
 </div>
 
