--- a/1103.html
+++ b/1103.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>app</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width,user-scalable=0,initial-scale=1,maximum-scale=1">
 <link href="1103.css" type="text/css" rel="stylesheet">
 </head>
 
