--- a/1103.html
+++ b/1103.html
@@ -8,7 +8,7 @@
 </head>
 
 <body> 
-<div id=slider>
+<div id=slide>
         <div class ="panel">1</div>
         <div class ="panel">2</div>
         <div class ="panel">3</div>
